# NiWrapper.Net

./: .gitignore  NiWrapper.sln  README.md
NiWrapper/: CMakeLists.txt
NiWrapper.Net/: NiWrapper.Net.csproj  VideoFrameRef.cs
NiWrapper_NiTE/: CMakeLists.txt
NiWrapper_NiTE.Net/: NiWrapper_NiTE.Net.csproj
NiWrapper_NiTE/src/: NiTE.cpp
Samples/NiTE.ConsoleTest/: NiTE.ConsoleTest.csproj  Program.cs
Samples/NiTE.SkeletonTracker/: Main.Designer.cs  Main.cs  NiTE.SkeletonTracker.csproj  Program.cs
